--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,55 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+#table1{
+	margin-bottom: 20px;
 }
 
-a {
-  color: #00B7FF;
+#redips-drag {
+	margin: auto;
+	width: 530px;
+}
+
+#redips-drag img {
+	margin: 1px;
+}
+
+/* drag objects border for the first table */
+.t1 {
+	border: 2px solid #499B33;
+}
+/* drag object border for the second table */
+.t2 {
+	border: 2px solid SteelBlue;
+}
+/* cloned objects - third table */
+.t3 {
+	border: 2px solid #FF8A58;
+}
+
+/* drag objects (DIV inside table cells) */
+.redips-drag {
+	cursor: move;
+	margin: auto;
+	margin-bottom: 1px;
+	margin-top: 1px;
+	z-index: 10;
+	background-color: white;
+	text-align: center;
+	font-size: 10pt; /* needed for cloned object */
+	width: 87px;
+	height: 20px;
+	line-height: 20px;
+	/* round corners */
+	border-radius: 4px; /* Opera, Chrome */
+	-moz-border-radius: 4px; /* FF */
+}
+
+
+.redips-mark {
+	color: white;
+	background-color: #9B9EA2;
+}
+
+/* tables */
+div#redips-drag table {
+	background-color: #e0e0e0;
+	border-collapse: collapse;
 }
