--- a/views/store.html
+++ b/views/store.html
@@ -1,14 +1,4 @@
-﻿<p class="text-info">
-    Welcome to the Angular Store.<br />
-    Please select the products you want and add them to your shopping cart.<br />
-    When you are done, click the shopping cart icon to review your order and check out.
-</p>
-
-<!--<p>
-    Search: <input ng-model="search">
-</p> -->
-
-<div class="row-fluid" ng-repeat="item in results" my-post-repeat-directive>
+﻿<div class="row-fluid" ng-repeat="item in results" my-post-repeat-directive>
 	<!--{{item.name}} <button ng-click="addCart(item)">Add</button> -->
 	<h3 class="product-name">{{item.name}}</h3>
 	<p class="product-price">${{item.price}}</p>
