--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -53,3 +53,14 @@ div#redips-drag table {
 	background-color: #e0e0e0;
 	border-collapse: collapse;
 }
+
+.roundCornered {
+    border-radius: 25px;
+    border: 2px solid black;
+    padding: 20px; 
+    width: 300px;
+    height: 150px; 
+	background-color: white;
+	margin-top: 5px;
+}
+
